Fixed Footer Icon Spacing

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -20,14 +20,16 @@ img.linkedin-icon{
   height: 50px;
   border-radius: 80%;
   margin-top: 10px;
+  margin-right: 10px;
   bottom: 10;
-  right:0;
+  right: 0;
 }
 img.github-icon{
   position: absolute;
   height: 50px;
   width: auto;
   margin-top: 10px;
+  margin-left: 5px;
   bottom: 10;
-  left:0;
+  left: 0;
 }
